--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
