--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
